refactor: Remove unused components and update examples
- Examples now use UDFs for specific operations rather than unlikely to
  be useful components.
- New example demonstrates how to use the Python SDK as a library to
  create components with business logic.
- Moved examples from `stepflow-rs/examples` to `examples` since they
  are general examples for using stepflow.

--- a/examples/file-loading/test-load.yaml
+++ b/examples/file-loading/test-load.yaml
@@ -23,6 +23,6 @@ test:
           test: "data"
           value: 42
         file_metadata:
-          resolved_path: "../../examples/file-loading/test-data.json"
+          resolved_path: "../../../examples/file-loading/test-data.json"
           size_bytes: 29
           format: "json"
