feat: Standardize naming
- Aligned the state store structs and API structs so they can be
  shared
- Change Exeuction types to Run
- Change all execution_id to run_id for consistency

--- a/stepflow-rs/crates/stepflow-state/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-state/Cargo.toml
@@ -25,4 +25,5 @@ serde_json.workspace = true
 stepflow-core.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
+utoipa.workspace = true
 uuid.workspace = true
