--- a/stepflow-rs/tests/builtins/nested_eval.yaml
+++ b/stepflow-rs/tests/builtins/nested_eval.yaml
@@ -36,4 +36,4 @@ test:
               messages:
               - role: user
                 content: Hello from nested flow
-          execution_id: '09adb2f6-c390-4e3c-a06b-32ecf1e95ba5'
+          run_id: '09adb2f6-c390-4e3c-a06b-32ecf1e95ba5'
