feat(plugin): Initial basic implementation of MCP server working within stepflow plumbing

--- a/stepflow-rs/crates/stepflow-components-mcp/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-components-mcp/Cargo.toml
@@ -16,3 +16,23 @@ workspace = true
 doctest = false
 
 [dependencies]
+# Core StepFlow dependencies
+stepflow-core.workspace = true
+stepflow-plugin.workspace = true
+stepflow-protocol.workspace = true
+
+# Async runtime and utilities
+tokio.workspace = true
+futures.workspace = true
+
+# Serialization
+serde.workspace = true
+serde_json.workspace = true
+
+# Error handling
+error-stack.workspace = true
+thiserror.workspace = true
+
+# Utilities
+indexmap.workspace = true
+tracing.workspace = true
