--- a/stepflow-rs/crates/stepflow-main/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-main/Cargo.toml
@@ -23,6 +23,7 @@ serde.workspace = true
 serde_json.workspace = true
 serde_yaml_ng.workspace = true
 stepflow-builtins.workspace = true
+stepflow-components-mcp.workspace = true
 stepflow-core.workspace = true
 stepflow-execution.workspace = true
 stepflow-mock.workspace = true
