refactor: Use existing crate for MCP types

--- a/stepflow-rs/crates/stepflow-components-mcp/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-components-mcp/Cargo.toml
@@ -29,5 +29,8 @@ serde_json.workspace = true
 error-stack.workspace = true
 thiserror.workspace = true
 
+# MCP Protocol
+rust-mcp-schema = "0.1.0"
+
 # Utilities
 indexmap.workspace = true
