feat(plugin): Initial basic implementation of MCP server working with… (#113)
* feat(plugin): Initial basic implementation of MCP server working within stepflow plumbing

* ci: Remove unused deps

* ci: added allow for dead code for stubbed out functions

* refactor: Use existing crate for MCP types

* ci: format fix

Remaninig items:
* tool discover
* schema conversion from MCP to StepFlow and back
* MCP handshake implementation to support proper MCP lifecycle
* execute method to call mcp server methods
* Significantly more robust error handling

--- a/stepflow-rs/crates/stepflow-components-mcp/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-components-mcp/Cargo.toml
@@ -16,3 +16,21 @@ workspace = true
 doctest = false
 
 [dependencies]
+# Core StepFlow dependencies
+stepflow-core.workspace = true
+stepflow-plugin.workspace = true
+stepflow-protocol.workspace = true
+
+# Serialization
+serde.workspace = true
+serde_json.workspace = true
+
+# Error handling
+error-stack.workspace = true
+thiserror.workspace = true
+
+# MCP Protocol
+rust-mcp-schema = "0.1.0"
+
+# Utilities
+indexmap.workspace = true
