feat: Plugin config loading and proper URL handling, tool discovery with placeholder data. Still need real protocol and server communication

--- a/stepflow-rs/crates/stepflow-components-mcp/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-components-mcp/Cargo.toml
@@ -32,5 +32,8 @@ thiserror.workspace = true
 # MCP Protocol
 rust-mcp-schema = "0.1.0"
 
+# Async runtime
+tokio.workspace = true
+
 # Utilities
 indexmap.workspace = true
