feat: Plugin config loading and proper URL handling, tool discovery w… (#116)
* feat: Plugin config loading and proper URL handling, tool discovery with placeholder data. Still need real protocol and server communication
* refactor: Update to latest rust-mcp-schema crate and ensure we are using all their types instead of ours

What i still have left:
* real mcp tool discovery and execution
* actual mcp protocol handshake
* mock server and integration testing
* a couple of example workflows

--- a/stepflow-rs/crates/stepflow-components-mcp/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-components-mcp/Cargo.toml
@@ -30,7 +30,10 @@ error-stack.workspace = true
 thiserror.workspace = true
 
 # MCP Protocol
-rust-mcp-schema = "0.1.0"
+rust-mcp-schema = "0.7.0"
+
+# Async runtime
+tokio.workspace = true
 
 # Utilities
 indexmap.workspace = true
