--- a/stepflow-rs/crates/stepflow-server/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-server/Cargo.toml
@@ -19,6 +19,7 @@ workspace = true
 axum.workspace = true
 chrono.workspace = true
 error-stack.workspace = true
+indexmap.workspace = true
 serde_json.workspace = true
 serde.workspace = true
 stepflow-analysis.workspace = true
@@ -38,6 +39,8 @@ uuid.workspace = true
 
 [dev-dependencies]
 stepflow-builtins.workspace = true
+stepflow-mock.workspace = true
+serde_yaml_ng.workspace = true
 tracing-error.workspace = true
 tracing-subscriber.workspace = true
 tower.workspace = true
