--- a/stepflow-rs/crates/stepflow-protocol/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-protocol/Cargo.toml
@@ -15,6 +15,7 @@ erased-serde.workspace = true
 error-stack.workspace = true
 futures.workspace = true
 indexmap.workspace = true
+schemars.workspace = true
 serde_json.workspace = true
 serde.workspace = true
 stepflow-core.workspace = true
@@ -25,6 +26,9 @@ tokio-stream.workspace = true
 tracing.workspace = true
 uuid.workspace = true
 which.workspace = true
+
+[dev-dependencies]
+similar-asserts.workspace = true
 
 [lints]
 workspace = true
