--- a/stepflow-rs/Cargo.toml
+++ b/stepflow-rs/Cargo.toml
@@ -30,7 +30,7 @@ regex = "1.11.1"
 reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
 rustyline = "14.0"
 safer_owning_ref = "0.5.0"
-schemars = { version = "0.8.22", features = ["indexmap2", "impl_json_schema", "url", "chrono"] }
+schemars = { version = "1.0", features = ["indexmap2", "url2", "chrono04"] }
 serde = { version = "1.0.219", features = ["derive", "rc"] }
 serde_json = { version = "1.0.140", features = ["preserve_order", "raw_value"] }
 serde_yaml_ng = "0.10.0"
