--- a/stepflow-rs/crates/stepflow-components-mcp/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-components-mcp/Cargo.toml
@@ -37,3 +37,10 @@ tokio.workspace = true
 
 # Utilities
 indexmap.workspace = true
+
+[dev-dependencies]
+# Testing dependencies
+stepflow-state.workspace = true
+stepflow-builtins.workspace = true
+futures.workspace = true
+uuid.workspace = true
