--- a/stepflow-rs/crates/stepflow-core/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-core/Cargo.toml
@@ -16,6 +16,7 @@ workspace = true
 doctest = false
 
 [dependencies]
+async-trait.workspace = true
 error-stack.workspace = true
 hex.workspace = true
 indexmap.workspace = true
@@ -28,7 +29,9 @@ sha2.workspace = true
 thiserror.workspace = true
 url.workspace = true
 utoipa.workspace = true
+uuid.workspace = true
 
 [dev-dependencies]
 insta.workspace = true
 similar-asserts.workspace = true
+tokio.workspace = true
