--- a/stepflow-rs/crates/stepflow-execution/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-execution/Cargo.toml
@@ -16,6 +16,7 @@ workspace = true
 doctest = false
 
 [dependencies]
+async-trait.workspace = true
 bit-set.workspace = true
 error-stack.workspace = true
 futures.workspace = true
