docs: Use generated schemas in documentation
- Updated the rust code a bit to fix the generated schemas
- Fixed a config where `cargo test` was only testing `stepflow-main`
- Fixed test failures hidden by the above

--- a/docs/package.json
+++ b/docs/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
-    "start": "docusaurus start",
-    "build": "docusaurus build",
+    "start": "npm run copy-schemas && docusaurus start",
+    "build": "npm run copy-schemas && docusaurus build",
+    "copy-schemas": "node scripts/copy-schemas.js",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
