--- a/examples/custom-python-components/stepflow-config.yml
+++ b/examples/custom-python-components/stepflow-config.yml
@@ -3,5 +3,5 @@ plugins:
     type: builtin
   - name: custom
     type: stdio
-    command: uv
+    command: /Users/jordan.frazier/.cargo/bin/uv
     args: ["--project", "../../sdks/python", "run", "python", "custom_server.py"]
