--- a/sdks/python/pyproject.toml
+++ b/sdks/python/pyproject.toml
@@ -8,6 +8,7 @@ requires-python = ">=3.13"
 dependencies = [
     "msgspec>=0.19.0",
     "jsonschema>=4.17.0",
+    "pyyaml>=6.0.2",
 ]
 
 [dependency-groups]
