feat: Mcp components 3 (#124)
* feat: Complete implementation of MCP server with examples. Pending some additional potential refactoring around URL loading

* doc: fix license header issues, remove unused library

* feat: update per PR feedback regarding mcp protocol string removal

* feat: Fixed exception mapping and delegation approach per comments in PR

* feat: update error handling logic to be more idiomatic and inline with code

* feat: Consisting use of FlowError for SF recoverable SF flow errors

--- a/stepflow-rs/crates/stepflow-components-mcp/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-components-mcp/Cargo.toml
@@ -37,3 +37,9 @@ tokio.workspace = true
 
 # Utilities
 indexmap.workspace = true
+
+[dev-dependencies]
+# Testing dependencies
+stepflow-state.workspace = true
+futures.workspace = true
+uuid.workspace = true
