--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,16 +52,8 @@ jobs:
         run: uv python install
         working-directory: sdks/python
 
-      - name: Check Python protocol is up-to-date
-        run: |
-          uv run python generate.py
-          if ! git diff --exit-code src/stepflow_sdk/generated_protocol.py; then
-            echo "❌ ERROR: Python protocol is not up-to-date!"
-            echo "The generated_protocol.py file is out of sync with the JSON schema."
-            echo "Please run 'cd sdks/python && uv run python generate.py' and commit the changes."
-            exit 1
-          fi
-          echo "✅ Python protocol is up-to-date!"
+      - name: Check Python generated types are up-to-date
+        run: uv run python generate.py --check
         working-directory: sdks/python
 
       - name: Run pytests
