--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -16,6 +16,12 @@ jobs:
       pull-requests: read
     steps:
       - uses: amannn/action-semantic-pull-request@v5
+        with:
+          scopes: |
+            core
+            py
+            ts
+            ui
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
