--- a/stepflow-rs/crates/stepflow-core/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-core/Cargo.toml
@@ -27,6 +27,7 @@ serde_yaml_ng.workspace = true
 serde.workspace = true
 sha2.workspace = true
 thiserror.workspace = true
+tracing.workspace = true
 utoipa.workspace = true
 uuid.workspace = true
 
