--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   main:
-    name: Validate PR title
+    name: Validate PR
     runs-on: ubuntu-latest
     permissions:
       pull-requests: read
