--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -13,7 +13,8 @@ jobs:
     name: Validate PR
     runs-on: ubuntu-latest
     permissions:
-      pull-requests: read
+      pull-requests: write
+      issues: write # Required for adding labels
     steps:
       - uses: amannn/action-semantic-pull-request@v5
         id: lint_pr_title
