chore: use gh to add lables

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -76,9 +76,10 @@ jobs:
 
       - name: Add labels
         if: steps.determine_labels.outputs.labels != ''
-        uses: actions-ecosystem/action-add-labels@v1
-        with:
-          labels: ${{ steps.determine_labels.outputs.labels }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          gh pr edit ${{ github.event.pull_request.number }} --add-label "${{ steps.determine_labels.outputs.labels }}"
 
       - uses: marocchino/sticky-pull-request-comment@v2
         # When any previous step fails, the workflow would stop. By adding this
