--- a/examples/custom-python-components/stepflow-config.yml
+++ b/examples/custom-python-components/stepflow-config.yml
@@ -5,3 +5,7 @@ plugins:
     type: stdio
     command: /Users/jordan.frazier/.cargo/bin/uv
     args: ["--project", "../../sdks/python", "run", "python", "custom_server.py"]
+  - name: langflow-v1 # creates component server
+    type: stdio
+    command: /Users/jordan.frazier/.cargo/bin/uv
+    args: ["--project", "../../sdks/python", "run", "langflow", "run"]
