chore: Fix mypy need-type-annotation

--- a/sdks/python/pyproject.toml
+++ b/sdks/python/pyproject.toml
@@ -135,5 +135,9 @@ module = "tests.*"
 ignore_errors = true
 
 [[tool.mypy.overrides]]
-module = "stepflow_sdk.generated_*"
+module = "stepflow_sdk.generated_flow"
+ignore_errors = true
+
+[[tool.mypy.overrides]]
+module = "stepflow_sdk.generated_protocol"
 ignore_errors = true
