chore: Don't format generated code

--- a/.github/actions/python-checks/action.yml
+++ b/.github/actions/python-checks/action.yml
@@ -36,11 +36,10 @@ runs:
       run: uv run poe lint-check
       working-directory: sdks/python
 
-    # TODO: Re-enable type checking once type issues are resolved
-    # - name: Run Python type checking
-    #   shell: bash
-    #   run: uv run poe type-check
-    #   working-directory: sdks/python
+    - name: Run Python type checking
+      shell: bash
+      run: uv run poe type-check
+      working-directory: sdks/python
 
     - name: Check Python dependencies
       shell: bash
