--- a/stepflow-rs/Cargo.toml
+++ b/stepflow-rs/Cargo.toml
@@ -21,6 +21,7 @@ erased-serde = "0.4.6"
 error-stack = { version = "0.5.0", features = ["serde"] }
 futures = "0.3.31"
 glob = "0.3"
+globset = "0.4"
 hex = "0.4"
 indexmap = { version = "2.8.0", features = ["serde"] }
 insta = { version = "1.34.0", features = ["glob", "yaml" ] }
@@ -33,6 +34,7 @@ safer_owning_ref = "0.5.0"
 schemars = { version = "1.0", features = ["indexmap2", "url2", "chrono04"] }
 serde = { version = "1.0.219", features = ["derive", "rc"] }
 serde_json = { version = "1.0.140", features = ["preserve_order", "raw_value"] }
+serde_with = { version = "3.14", features = ["schemars_1"]}
 serde_yaml_ng = "0.10.0"
 sha2 = "0.10"
 similar = "2.7.0"
