--- a/stepflow-rs/crates/stepflow-plugin/Cargo.toml
+++ b/stepflow-rs/crates/stepflow-plugin/Cargo.toml
@@ -19,7 +19,10 @@ doctest = false
 dynosaur.workspace = true
 error-stack.workspace = true
 futures.workspace = true
+globset.workspace = true
 serde.workspace = true
+serde_json.workspace = true
+serde_with.workspace = true
 stepflow-core.workspace = true
 stepflow-state.workspace = true
 thiserror.workspace = true
